# sports-quant

./: .env.example  .gitignore  2024_boxscore_urls.txt  2024_regular_game_data.csv  2024_team_data.csv  LICENSE  Makefile  README.md  authenticate.py  config.py  extract-dates.py  get-odds.py  main.py  model_config.yaml  normalize-date.py  pyproject.toml  scrape.py  teams.py  test.py
.github/workflows/: ci.yml  publish.yml
data/: nfl_odds_data.json  normalized_nfl_odds_data.json  normalized_team_data.csv  pff_and_pfr_data.csv  team_data.csv
data/march-madness/: prediction_data.csv  training_data.csv
data/march-madness/barttorvik/: barttorvik_data.csv
data/over-under/: raw-dataset.csv  v1-dataset-gp.csv  v1-dataset-modified.csv  v1-dataset.csv
data/pff/: dates_team_data.csv  normalized_team_data.csv  team_data.csv
data/pfr/: boxscores_urls.txt  normalized_pfr_odds.csv  regular_game_data.csv
docs/: bracket-simulation-spec.md  bracket-visualization-plan.md  injury-adjustment-spec.md  kaggle-enhancement-spec.md  model-analysis-findings.md  seed-slot-debiasing-spec.md
postprocessing/: games-played.py  over-under.py  prep-pff-data.py
pro-football-focus/historical/: scrape.py
pro-football-reference/: get-game-data.py  get-regular-season-urls.py
scripts/: build_2025_bracket.py  close_game_debiased_analysis.py  close_game_debiased_threshold_sweep.py  close_game_deeper_analysis.py  close_game_threshold_analysis.py  retune_compare.py  retune_e2e.py  simulate_2026.py  train_2026_models.py
src/nfl_data_pipeline/: __init__.py  _config.py  cli.py
src/sports_quant/: __init__.py  _config.py  cli.py  pipeline.py  teams.py
tests/: conftest.py  test_bracket_topology.py  test_calibration.py  test_config.py  test_data.py  test_debiasing_diff.py  test_feature_builder_diff.py  test_features.py  test_march_madness_bracket.py  test_march_madness_bracket_cli.py  test_march_madness_bracket_plots.py  test_march_madness_clean_kenpom.py  test_march_madness_data.py  test_march_madness_debiasing.py  test_march_madness_features.py  test_march_madness_results.py  test_march_madness_upsets.py  test_march_madness_versioning.py  test_over_under.py  test_pff_dates.py  test_pff_extract_dates.py  test_pff_normalize_teams.py  test_pff_teams.py  test_pfr_dates.py  test_pfr_normalize_date.py  test_pfr_normalize_teams.py  test_pfr_teams.py  test_prep_pff_data.py  test_rolling_averages.py  test_schedule.py  test_scoring.py  test_survivor.py
utils/: merge-pff-and-pfr.py
utils/pff/: extract-dates.py  normalize-team-names.py
utils/pfr/: normalize-date.py
(+140 files in other folders)
