[tool.poetry]
name = "scrape-pff"
version = "0.1.0"
description = ""
authors = ["Thad Hutcheson <thadhutch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.23.1"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
sbrscrape = "^0.0.10"
bs4 = "^0.0.2"
selenium-wire = "^5.1.0"
setuptools = "^75.1.0"
blinker = "1.7.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
